--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
         xmlns:tools="http://schemas.android.com/tools"
     package="com.anandnet.harmonymusic">
    <application
-        android:label="Harmony Music"
+        android:label="Tunify"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
